<resources>
    <string name="app_name">Candidates</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_list">Polling stations</string>
    <string name="menu_candidates">Candidates</string>
    <string name="menu_about">About</string>

    <string name="title_activity_maps">Map</string>
    <string name="about_app_desc">Created by Aleksey Kritskov, Georgy Kotlyar, Kuznetsova Anastasiya, Ermolov Viktor and Klushkin Valeriy.</string>
    <string name="year_label">Year of birth:&#160;%1$d</string>
    <string name="residence_label">Place of residence:&#160;%1$s</string>
    <string name="work_label">Place of work:&#160;%1$s</string>
    <string name="work_position_label">Position:&#160;%1$s</string>
    <string name="biography_label">Biography</string>
    <string name="candidates_load_error">Failed to load candidates list.</string>
    <string name="district_number">Selected district: %1$d</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="nothing_found">Nothing found(</string>
    <string name="address_hint">Enter your address</string>
    <string name="district_confirm_button_desc">Confirm selected district</string>
    <string name="active_district">Your active district is %1$d</string>
    <string name="district_not_found">District not found</string>
    <string name="menu_district">My District</string>
    <string name="title_district">District №%1$d</string>
    <string name="message_select_district">Please, select your district on the map</string>
    <string name="title_nearest">Polling stations in your district</string>
    <string name="title_district_candidates">Candidates in your district</string>
    <string name="see_more">See more</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="no_candidates_in_district">No candidates in this district &#129300;</string>
    <string name="no_stations_in_district">No polling stations in your district &#129300;</string>
    <string name="title_polling_station">Polling station</string>
    <string name="explain_location">You need to give the app permission to use your location, so we can automatically detect your district.</string>
    <string name="desc_row_post_image">Post image</string>
    <string name="desc_user_image">User image</string>
    <string name="username">Username</string>
    <string name="desc_close_dialog">Close dialog</string>
    <string name="title_edit_post">Edit post</string>
    <string name="desc_post_image">Add image to post</string>
    <string name="hint_post_title">Post title</string>
    <string name="hint_post_description">Post description</string>
    <string name="desc_post_done">Publish post</string>
    <string name="nav_discussion">Discussion</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="or">or</string>
    <string name="sign_out">Sign out</string>
    <string name="candidate">Candidate</string>
    <string name="title_post">Post</string>

</resources>
