<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_district"
            android:title="@string/menu_district" />
        <item
            android:id="@+id/nav_list"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_candidates"
            android:title="@string/menu_candidates" />
        <item
            android:id="@+id/nav_discussion"
            android:title="@string/nav_discussion"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
    </group>

</menu>
