<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="ru.cadmean.candidates.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_nav_map_to_nav_district"
            app:destination="@id/nav_district"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_list"
        android:name="ru.cadmean.candidates.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_nav_list_to_stationFragment"
            app:destination="@id/stationFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_candidates"
        android:name="ru.cadmean.candidates.CandidatesFragment"
        android:label="@string/menu_candidates"
        tools:layout="@layout/fragment_candidates">
        <action
            android:id="@+id/action_nav_candidates_to_nav_candidate"
            app:destination="@id/nav_candidate"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="ru.cadmean.candidates.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/nav_candidate"
        android:name="ru.cadmean.candidates.CandidateFragment"
        android:label="@string/candidate"
        tools:layout="@layout/fragment_candidate" />
    <fragment
        android:id="@+id/nav_district"
        android:name="ru.cadmean.candidates.MyDistrictFragment"
        android:label="@string/menu_district"
        tools:layout="@layout/fragment_my_district">
        <action
            android:id="@+id/action_nav_district_to_nav_map"
            app:destination="@id/nav_map" />
        <action
            android:id="@+id/action_nav_district_to_nav_candidate"
            app:destination="@id/nav_candidate" />
        <action
            android:id="@+id/action_nav_district_to_stationFragment"
            app:destination="@id/stationFragment" />
    </fragment>
    <fragment
        android:id="@+id/registration_fragment"
        android:name="ru.cadmean.candidates.RegistrationFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_registration_fragment_to_nav_discussion"
            app:destination="@id/nav_discussion" />
        <action
            android:id="@+id/action_registration_fragment_to_login2Fragment"
            app:destination="@id/login2Fragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/login2Fragment"
        android:name="ru.cadmean.candidates.Login2Fragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login2">
        <action
            android:id="@+id/action_login2Fragment_to_nav_discussion"
            app:destination="@id/nav_discussion" />
        <action
            android:id="@+id/action_login2Fragment_to_registration_fragment"
            app:destination="@id/registration_fragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/stationFragment"
        android:name="ru.cadmean.candidates.StationFragment"
        android:label="@string/title_polling_station"
        tools:layout="@layout/fragment_station" />
    <fragment
        android:id="@+id/postFragment"
        android:name="ru.cadmean.candidates.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/nav_discussion"
        android:name="ru.cadmean.candidates.DiscussionFragment"
        android:label="@string/nav_discussion"
        tools:layout="@layout/fragment_discussion">
        <action
            android:id="@+id/action_nav_discussion_to_login2Fragment"
            app:destination="@id/login2Fragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_nav_discussion_to_postFragment"
            app:destination="@id/postFragment" />
    </fragment>

</navigation>