<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PostDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/post_bar"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:background="?attr/colorPrimary">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_close_white_48"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_close_dialog"
            android:id="@+id/close_button"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_edit_post"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_done_white_48"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_post_done"
            android:layout_marginEnd="20dp"
            android:id="@+id/done_button"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/post_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/edit_image"
                android:contentDescription="@string/desc_post_image"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_title"
                android:inputType="text"
                android:hint="@string/hint_post_title"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_description"
                android:inputType="text"
                android:hint="@string/hint_post_description"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>