<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

        <ImageView
            android:id="@+id/regUserPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/baseline_account_box_24" />

        <EditText
            android:id="@+id/regName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_edittext_style"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/regUserPhoto"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/regMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/reg_edittext_style"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/regName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/regPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_edittext_style"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/regMail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/regPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_edittext_style"
            android:ems="10"
            android:hint="@string/hint_repeat_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/regPassword1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/regBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_btn_style"
            android:text="@string/register"
            android:textColor="#ffffff"
            app:layout_constraintTop_toBottomOf="@id/regPassword2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/regBtn"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/or_login"
            android:text="@string/or"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/or_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/login"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/or_login_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>