<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login2Fragment">

    <ImageView
        android:id="@+id/login_Photo"
        android:layout_width="142dp"
        android:layout_height="124dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/baseline_account_box_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_Mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Photo" />

    <EditText
        android:id="@+id/login_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_Mail"/>

    <Button
        android:id="@+id/login_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_btn_style"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_Btn"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/or_register"
        android:text="@string/or"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/or_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/register"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/or_register_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>